# id-churn-sentinel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml  trufflehog.yml  watch.yml
docs/: 00-V1-PLAN.md  01-PRD.md  02-USER-RESEARCH-AND-PILOT.md  03-SERVICE-DESIGN.md  04-ARCHITECTURE.md  05-DATA-AND-EVIDENCE.md  06-SECURITY-PRIVACY-THREAT-MODEL.md  07-GOVERNANCE-LEGAL-SAFETY.md  08-ACCESSIBILITY-I18N.md  09-TEST-AND-EVALUATION.md  10-OPERATIONS-SRE.md  11-GTM-BUSINESS-MODEL.md  12-ROADMAP.md  13-BACKLOG.md  14-RISK-REGISTER.md  15-V1-RELEASE-CHECKLIST.md  16-RESEARCH-SOURCES.md  COMMERCIAL-STATUS.md  CONSUMERS.md  I18N.md  README.md  RESPONSIBLE-TECH-AUDITS.md  ROADMAP.md  VERIFYING.md  changes-us-ak.json  changes-us-al.json  changes-us-ar.json  changes-us-az.json  changes-us-ca.json  changes-us-co.json  changes-us-ct.json  changes-us-dc.json  changes-us-de.json  changes-us-fl.json  changes-us-ga.json  changes-us-hi.json  changes-us-ia.json  changes-us-id.json  changes-us-il.json  changes-us-in.json  (+93 more)
docs/adr/: 0000-record-architecture-decisions.md
docs/decisions/: 0001-v1-boundary.md  0002-fail-closed-runs-and-public-health.md  0003-append-only-dual-review-and-corrections.md
docs/schema/: changes-v1.schema.json  changes-v2.schema.json  status-v1.schema.json
sources/: baseline-hashes.json  registry.json
src/id_churn_sentinel/: __init__.py  cli.py  errors.py
src/id_churn_sentinel/core/: __init__.py  baseline.py  changes.py  coverage.py  detect.py  eligibility.py  fetch.py  normalize.py  publish.py  registry.py  site.py  status.py  store.py  verify.py
tests/: conftest.py  test_baseline.py  test_changes.py  test_cli.py  test_coverage.py  test_detect.py  test_eligibility.py  test_feed_integrity.py  test_fetch.py  test_governance.py  test_no_auto_classification.py  test_normalize.py  test_publish.py  test_registry.py  test_removal.py  test_schema.py  test_site.py  test_source_labelling.py  test_status.py  test_store.py  test_verify.py
tests/fixtures/: source-verification-v1.0.schema.json  state-page-after.html  state-page-before.html  state-page-cosmetic.html
